src/assets/css/style.css
/* see '2016 Palettes' on https://www.w3schools.com/colors/colors_palettes.asp */
:root {
  --blue-light:  #deeaee;
  --blue-medium: #92a8d1;
  --blue-dark:   #034f84;
  --red-light:   #f7cac9;
  --red-medium:  #f7786b;
  --red-dark:    #c94c4c;
  --green-light: #b1cbbb;
}

/*
 * the first row of each tbody is a directory name.
 * it contains one table header (th) and at least one table data cell.
 * the whole row should have the some background color.
 */
.table tbody tr:nth-child(1) td,
.table tbody tr:nth-child(1) th {
  background-color: var(--blue-light);
}

/* highlight a hovered table row */
.table-hover tbody tr:hover th,
.table-hover tbody tr:hover td {
  background-color: var(--green-light);
}

/* the action button column should have a small fixed size */
.table td:nth-child(3) {
  width: 2em;
  min-width: 2em;
}

/* introduce a hover-and-click effect for bootstrap buttons */
.btn {
  position: relative;
  transition: none;
}
.btn-primary, .btn-warning {
  box-shadow: 0 6px #000;
}
.btn-primary:hover, .btn-warning:hover {
  box-shadow: 0 3px #000;
  top: 3px;
}
.btn-primary:active, .btn-warning:active {
  box-shadow: 0 0px #000;
  top: 6px;
}

/* set custom button colors */
.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
  background-color: var(--blue-dark)!important;
}

/* make bootstrap alerts sticky, show them at the top, and let them cover buttons */
.alert-top-sticky {
  position: -webkit-sticky;
  position: -moz-sticky;
  position: -ms-sticky;
  position: -o-sticky;
  position: sticky;
  top: 0;
  /* needed due to `.btn` setting `position: relative' (stacking context changed) */
  z-index: 1;
}

